--- a/vid/pom.xml
+++ b/vid/pom.xml
@@ -6,7 +6,7 @@
     <groupId>cn.vgbhfive</groupId>
     <artifactId>vid</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>vid</name>
     <description>Demo project for Spring Boot</description>
