admit GraphQL Test Demo And Run the Application is working!

--- a/vid/pom.xml
+++ b/vid/pom.xml
@@ -25,6 +25,8 @@
     </properties>
 
     <dependencies>
+
+        <!--Start-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -36,6 +38,8 @@
             <scope>test</scope>
         </dependency>
 
+
+        <!--Log-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -46,6 +50,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.25</version>
+        </dependency>
+
+        <!--GraphQL-->
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
