--- a/vid/src/main/resources/application.properties
+++ b/vid/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+# server
 server.port=8080
 server.servlet.context-path=/vid
+
+# GraphQL
+# org.springframework.boot.autoconfigure.EnableAutoConfiguration=com.creactiviti.spring.boot.starter.graphql.GraphQLAutoConfiguration
+# 为了解决当初遇到的配置文件无法读出而写的
